--- a/harkka/project1/templates/home.html
+++ b/harkka/project1/templates/home.html
@@ -5,9 +5,12 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
+  <p><a href="{% url 'list_cars' %}">Selaa autoja</a></p>
   <p><a href="{% url 'logout' %}">Logout</a></p>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Login</a>
 {% endif %}
+
+
 {% endblock %}
